# til

./: README.md  Understanding_and_Solving_Java_Memory_Problems.md
java/jpa/jpa-playground/: README.md  build.gradle
java/jpa/jpashop/: README.md  build.gradle
java/jpa/querydsl/: README.md  build.gradle
java/jpa/spring-data-jpa/: READMD.md  README.md  build.gradle
java/jvm/: Understanding_and_Solving_Java_Memory_Problems.md  Understanding_and_Solving_Java_Memory_Problems_Summary.md  understanding-java-vm-memory-management.md
java/spring/file-upload/: README.md
java/spring/helloboot/: build.gradle
java/spring/mvc-item-service/: README.md  build.gradle
java/spring/spring-boot-3/: build.gradle
java/spring/spring-boot-4-autoconfig/: build.gradle  settings.gradle
java/spring/spring-boot-5-memory/: settings.gradle
java/spring/spring-boot-5-memory-v2/: build.gradle  settings.gradle
java/spring/spring-boot-5-project-v1/: build.gradle  settings.gradle
java/spring/spring-boot-5-project-v2/: build.gradle  (+1 more)
kotlin-basic/: README.md  build.gradle
kotlin-playground/: README.md  build.gradle.kts
kotlin/coroutines/: build.gradle.kts
kotlin/kafka-lecture/: build.gradle.kts  settings.gradle.kts
micro-service/user-management/: pom.xml
nwitter/: package-lock.json  package.json
nwitter/src/: fbase.js  firebase.js  index.js
python/inflearn-llm-application/: .gitignore  1.langchain_llm_test.ipynb  2.rag_with_chroma.ipynb  3.rag_without_langchain.ipynb  pyproject.toml  tax.docx
python/lang-chain-test/: main.py
rdb/sql-antipatterns/: setup.sql
(+903 files in other folders)
