[project]
name = "inflearn-llm-application"
version = "0.1.0"
description = ""
authors = [
    {name = "pilhwan.kim",email = "pilhwan.kim@navercorp.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.9"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "docx2txt (>=0.8,<0.9)",
    "langchain-community (>=0.3.20,<0.4.0)",
    "langchain-text-splitters (>=0.3.7,<0.4.0)",
    "langchain-chroma (>=0.2.2,<0.3.0)",
    "langchain-ollama (>=0.3.0,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
